v.1.9.4 - wrapped the ol in a DIV so that I can apply a right border if needed. Need to see how zero-entry works slash error handling, and need to verify in mobile. This is a version I can leave on my live site, but I want to make sure of the above before moving on fully to other projects.

--- a/css/waypoint-style.css
+++ b/css/waypoint-style.css
@@ -66,12 +66,12 @@ html {
 
 .waypoint826-main p.content {
 	display: block;
-	color: var(--text-secondary);
+	color: var(--text-primary);
 	font-size: 18px;
 	padding-right: 20px; /*calc(var(--Base-Unit) * 1.25);*/
-	padding-left: 20px; /*calc(var(--Base-Unit) * 1.25);*/
+	padding-left: 16px; /*calc(var(--Base-Unit) * 1.25);*/
 	padding-bottom: 10px;
-	font-weight: 500;
+	font-weight: 600;
 }
 
 /*---   LIST STYLING   ---*/
@@ -79,9 +79,8 @@ html {
 .waypoint826-main ol.list-wrapper {
 	list-style-type: none;
 	margin: 0!important;
-	padding-top: 30px;
+	padding-top: 0px;
 	padding-bottom: 10px;
-	border-right: 1px solid #ccc;
 	list-style: none;
 }
 
